--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   width: 100%;
   overflow: hidden;
-  background-image: linear-gradient(to bottom right, #020617, #1e1b4b, #020617);
+  background-image: linear-gradient(to bottom right, #112920, #0E1512, #1B2E3C);
   display: flex;
   align-items: center;
   justify-content: center;
